# discord-benchmark

./: .gitignore  README.md
JavaScript/discord.js/: README.md  main.js  massif.out.143849  package-lock.json  package.json
JavaScript/eris/: README.md  main.js  massif.out.35464  package-lock.json  package.json
Rust/serenity/: Cargo.toml  README.md  massif.out.73650
Rust/serenity/src/: main.rs
